# assert(mode == ControlAroundStripMined && use == sfpt) failed: missed a node

XMLWordPrintable

    • b16
    • Verified

        The assertion
        # assert(mode == ControlAroundStripMined && use == sfpt) failed: missed a node
        was hit again in JDK14+10 by JavaFauzzer test.



        # Internal Error (open/src/hotspot/share/opto/loopopts.cpp:1696), pid=19337, tid=19348
        # assert(mode == ControlAroundStripMined && use == sfpt) failed: missed a node
        #
        # JRE version: Java(TM) SE Runtime Environment (14.0+10) (fastdebug build 14-ea+10-332)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-ea+10-332, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x11eb9dd] PhaseIdealLoop::clone_loop_handle_data_uses(Node*, Node_List&, IdealLoopTree*, IdealLoopTree*, Node_List*&, Node_List*&, Node_List*&, Node_List&, unsigned int, PhaseIdealLoop::CloneLoopMode)+0x62d
        #
        ...............
        --------------- T H R E A D ---------------

        Current thread (0x00007f21fc257800): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=19348, stack(0x00007f21e0aa7000,0x00007f21e0ba8000)]


        Current CompileTask:
        C2: 251 49 % ! 4 Test::iMeth @ 72 (266 bytes)

        Stack: [0x00007f21e0aa7000,0x00007f21e0ba8000], sp=0x00007f21e0ba1c40, free space=1003k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x11eb9dd] PhaseIdealLoop::clone_loop_handle_data_uses(Node*, Node_List&, IdealLoopTree*, IdealLoopTree*, Node_List*&, Node_List*&, Node_List*&, Node_List&, unsigned int, PhaseIdealLoop::CloneLoopMode)+0x62d
        V [libjvm.so+0x11edd54] PhaseIdealLoop::clone_loop(IdealLoopTree*, Node_List&, int, PhaseIdealLoop::CloneLoopMode, Node*)+0xd64
        V [libjvm.so+0x11b25cc] PhaseIdealLoop::insert_post_loop(IdealLoopTree*, Node_List&, CountedLoopNode*, CountedLoopEndNode*, Node*, Node*, CountedLoopNode*&)+0xdc
        V [libjvm.so+0x11b3674] PhaseIdealLoop::insert_pre_post_loops(IdealLoopTree*, Node_List&, bool)+0x2d4
        V [libjvm.so+0x11bbc5b] IdealLoopTree::iteration_split_impl(PhaseIdealLoop*, Node_List&)+0x42b
        V [libjvm.so+0x11bd111] IdealLoopTree::iteration_split(PhaseIdealLoop*, Node_List&)+0x111
        V [libjvm.so+0x11bd026] IdealLoopTree::iteration_split(PhaseIdealLoop*, Node_List&)+0x26
        V [libjvm.so+0x11bd026] IdealLoopTree::iteration_split(PhaseIdealLoop*, Node_List&)+0x26
        V [libjvm.so+0x11e0bb7] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0xd27
        V [libjvm.so+0x9c6b2a] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x2ea
        V [libjvm.so+0x9c3c64] Compile::Optimize()+0xbc4
        V [libjvm.so+0x9c527f] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x109f
        V [libjvm.so+0x807cad] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x10d
        V [libjvm.so+0x9d1962] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x2d2
        V [libjvm.so+0x9d2858] CompileBroker::compiler_thread_loop()+0x3b8
        V [libjvm.so+0x16cac36] JavaThread::thread_main_inner()+0x226
        V [libjvm.so+0x16d0276] Thread::call_run()+0xf6
        V [libjvm.so+0x13ecede] thread_native_entry(Thread*)+0x10e

          1. FuzzerUtils$1.class
            0.8 kB
          2. FuzzerUtils.class
            8 kB
          3. FuzzerUtils.java
            13 kB
          4. Test.class
            5 kB
          5. Test.java
            7 kB
          6. replay_pid19337.log
            103 kB
          7. hs_err_pid19337.log
            73 kB
          8. Test01.java
            5 kB

              Assignee:
              Roland Westrelin
              Reporter:
              Leonid Mesnik
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: