8230061: # assert(mode == ControlAroundStripMined && use == sfpt) failed: missed a node

Reviewed-by: thartmann, neliasso